# chinese-trading-day-rust

./: Cargo.toml  README.md  default.nix  rustfmt.toml
data/: vocation.yaml
src/: chinese_trading_day.rs  main.rs
