[package]
name = "chinese-trading-day-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="0.11"
chrono="0.4.30"
serde = { version = "1.0", features =  ["derive"]}
serde_yaml = "0.9"
[lib]
name  = "chinese_trading_day"
path="src/chinese_trading_day.rs"
